# zk-prove-bench

./: .gitignore  README.md
circuits/balance_threshold/: Nargo.toml
circuits/balance_threshold/src/: main.nr
results/: sweep_summary.csv
scripts/: bench.sh  sweep.sh
zkbench/: .gitignore  Cargo.toml  LICENSE-MIT  README.md
zkbench/src/: circuit.rs  cli.rs  main.rs  measure.rs  pipeline.rs  report.rs  tools.rs
